--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <p>Git add "nombre del archivo"
         Git add .
     </p>
+    <p>
+        Git commit -m "mensaje del commit"
+    </p>
+    <p>
+        Git config --global user.name "Bernardo"
+        Git config --global user.email bvalarezovera@gmail.com
+    </p>
+    <p>
+        Git clone https://github.com/andres174/sistema-promedio.git
+    </p>
     
 </body>
 </html>
