--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <p>
         Git clone https://github.com/andres174/sistema-promedio.git
     </p>
+    <p>
+        Git pull
+    </p>
     
 </body>
 </html>
